[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Kenney Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 302 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -44.3595, -27.6289 )
scale = Vector2( 20.234, 14.0153 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="World" type="Node2D" parent="."]

[node name="UpperWall" parent="World" instance=ExtResource( 2 )]
position = Vector2( 0, 335 )

[node name="LowerWall" parent="World" instance=ExtResource( 2 )]
position = Vector2( -1, -335 )

[node name="RightGoal" type="Area2D" parent="World"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/RightGoal"]
position = Vector2( -525, 0 )
shape = SubResource( 1 )

[node name="LeftGoal" type="Area2D" parent="World"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/LeftGoal"]
position = Vector2( 525, 0 )
shape = SubResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( -475, 0 )
move_up = "w"
move_down = "s"

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 475, 0 )
move_up = "arrow_up"
move_down = "arrow_down"

[node name="Ball" parent="." instance=ExtResource( 1 )]

[node name="Score" type="Node" parent="."]

[node name="RightScore" type="Label" parent="Score"]
anchor_top = -0.00116394
anchor_bottom = -0.00116394
margin_left = 2.1958
margin_top = -280.905
margin_right = 56.1958
margin_bottom = -229.905
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="Score"]
anchor_top = -0.00116394
anchor_bottom = -0.00116394
margin_left = -27.2641
margin_top = -275.207
margin_right = 26.7359
margin_bottom = -224.207
custom_fonts/font = SubResource( 2 )
text = "_
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftScore" type="Label" parent="Score"]
anchor_top = -0.00116394
anchor_bottom = -0.00116394
margin_left = -54.8598
margin_top = -281.603
margin_right = -0.859833
margin_bottom = -230.603
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="World/RightGoal" to="." method="_on_RightGoal_body_entered"]
[connection signal="body_entered" from="World/LeftGoal" to="." method="_on_LeftGoal_body_entered"]
